welcome.lessons.welcome.bat.bool1.Diff21.scala.error
diff21:10: error: type mismatch;
 found   : Unit
 required: Int
s=s*2}
 ^